syntax = "proto3";

option csharp_namespace = "gRPC";
import "google/protobuf/empty.proto";

service gRPCCurrency {
    rpc GetCurrencyOnDate (CurrencyOnDateRequest) returns (CurrencyDTOResponse);
    rpc GetCurrentCurrency (CurrentCurrencyRequest) returns (CurrencyDTOResponse);
    rpc GetStatus (google.protobuf.Empty) returns (Status);
}

enum CurrencyType {
    USD = 0;
    RUB = 1;
    KZT = 2;
  }
  
  message CurrencyDTOResponse {
    CurrencyType CurrencyType = 1;
    double Value = 2;
  }

message CurrencyOnDateRequest {
    CurrencyType CurrencyType = 1;
    int64 Date = 2; // DateTime.Ticks
  }
  
  message CurrentCurrencyRequest {
    CurrencyType CurrencyType = 1;
  }
  message Status {
      bool hasRequests = 1;
      CurrencyType BaseCurrency = 2;
  }